--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,7 +3,142 @@
 @import 'reset';
 @import 'global';
 
+.header__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 0;
+}
 
+.menu {
+    &__list {
+        display: flex;
+        justify-content: center;
+    }
+
+    &__item:not(:last-child) {
+        margin-right: 35px;
+    }
+
+    &__link {
+        @extend %rubik-500;
+        font-size: 15px;
+        line-height: 1;
+        color: #436372;
+    }
+}
+
+.user-icons {
+    display: flex;
+
+    &__item {
+        position: relative;
+        width: 50px;
+        height: 50px;
+        margin-right: 20px;
+        border: none;
+        border-radius: 50%;
+        background-color: $accent;
+        cursor: pointer;
+        outline: transparent;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            background-image: url('../images/icons/search.svg');
+            background-position: center;
+            background-repeat: no-repeat;
+            transition: transform 0.3s;
+        }
+
+        &:hover .user-icons__num {
+            transform: scale(1.2);
+        }
+
+        &:focus {
+            border: 2px solid #114e6e;
+        }
+
+        &:hover::before {
+            transform: scale(1.2);
+        }
+
+        &:active::before {
+            transform: rotateX(180deg);
+        }
+
+        &--search {
+            background-color: #edf1f4;
+
+            &::before {
+                background-image: url('../images/icons/search.svg');
+            }
+
+        }
+
+        &--like {
+            width: 90px;
+            margin-right: 0;
+            border-radius: 22px 0 0 22px;
+            background-color: $header-accent;
+
+            &::before {
+                background-image: url('../images/icons/like.svg');
+                background-position-x: 60%;
+            }
+        }
+
+        &--basket {
+            width: 90px;
+            background-color: $header-accent;
+            border-radius: 0 22px 22px 0;
+
+            &::before {
+                background-image: url('../images/icons/basket.svg');
+                background-position-x: 40%;
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: 0;
+                width: 1px;
+                height: 32px;
+                background-color: #ffffff;
+                transform: translateY(-50%);
+            }
+        }
+
+        &--menu::before {
+            background-image: url('../images/icons/menu.svg');
+        }
+    }
+
+    &__num {
+        position: absolute;
+        top: 8px;
+        right: 20px;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        text-align: center;
+        line-height: 16px;
+        @extend %dmsans-400;
+        font-size: 10px;
+        color: #243f4d;
+        background-color: #ffffff;
+        transition: transform 0.3s;
+    }
+
+    &__num--basket {
+        right: 34px;
+    }
+}
 
 
 
