--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -10,3 +10,14 @@ body {
     padding: 0 15px;
     margin: 0 auto;
 }
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    white-space: nowrap;
+    clip-path: inset(0 0 0 0);
+    overflow: hidden;
+}
