--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,10 +1,16 @@
+$black: #191919;
+$header-accent: #fcd7b6;
+$accent: #a3bbc8;
+$footer-accent: #7b7b7b;
+$footer-title: #1f2044;
+
 %rubik-400 {
     font-family: 'Rubik-Regular', sans-serif;
     font-weight: 400;
 }
 
 %rubik-500 {
-    font-family: 'Rubik-Regular', sans-serif;
+    font-family: 'Rubik-Medium', sans-serif;
     font-weight: 500;
 }
 
