--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -21,3 +21,19 @@ body {
     clip-path: inset(0 0 0 0);
     overflow: hidden;
 }
+
+.link {
+    outline: none;
+    transition: padding 0.3s;
+    &:focus {
+        border-bottom: 2px solid $accent;
+    }
+
+    &:hover {
+        opacity: 0.7;
+    }
+
+    &:active {
+        padding: 5px;
+    }
+}
