--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,8 +1,9 @@
 $black: #191919;
 $header-accent: #fcd7b6;
 $accent: #a3bbc8;
-$footer-accent: #7b7b7b;
+$footer-default: #7b7b7b;
 $footer-title: #1f2044;
+$bg: #ffffff;
 
 %rubik-400 {
     font-family: 'Rubik-Regular', sans-serif;
