--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -127,7 +127,7 @@
         height: 16px;
         border-radius: 50%;
         text-align: center;
-        line-height: 16px;
+        line-height: 18px;
         @extend %dmsans-400;
         font-size: 10px;
         color: #243f4d;
@@ -137,6 +137,121 @@
 
     &__num--basket {
         right: 34px;
+    }
+}
+
+
+.footer {
+    &__top {
+        display: flex;
+        justify-content: space-between;
+        padding: 80px 0 73px;
+        border-bottom: 1px solid #dae4e9;
+    }
+
+    &__address {
+        width: 215px;
+    }
+
+    &__logo {
+        display: block;
+        margin-bottom: 28px;
+    }
+
+    &__contact {
+        display: block;
+        margin-bottom: 10px;
+        font-size: 14px;
+        font-style: normal;
+        line-height: 1.7;
+        color: $footer-default;
+    }
+
+    &__caps {
+        text-transform: uppercase;
+    }
+
+    &__title {
+        margin-bottom: 30px;
+        @extend %dmsans-700;
+        font-size: 16px;
+        line-height: 1.3;
+        text-transform: uppercase;
+        color: $footer-title;
+    }
+
+    &__list {
+        padding: 0 5px;
+        width: 145px;
+    }
+
+    &__item {
+        line-height: 1.4;
+        color: $footer-default;
+    }
+
+    &__item:not(:last-child) {
+        margin-bottom: 12px;
+    }
+
+    &__newsletter {
+        width: 285px;
+        padding: 0 5px;
+    }
+
+    &__text {
+        width: 240px;
+        margin-bottom: 30px;
+        font-size: 14px;
+        line-height: 1.7;
+        color: $footer-default;
+    }
+
+    &__form {
+        display: flex;
+    }
+
+    &__input {
+        padding: 15px 5px 15px 16px;
+        background-color: #fef7f0;
+        border: 1px solid transparent;
+        @extend %dmsans-400;
+        font-size: 12px;
+        line-height: 1;
+        color: #234969;
+    }
+
+    &__btn {
+        margin-left: -5px;
+        padding: 9px 17px;
+        @extend %dmsans-400;
+        font-size: 14px;
+        line-height: 1.5;
+    }
+
+    &__bottom {
+        display: flex;
+        justify-content: space-between;
+        padding: 37px 0;
+    }
+
+
+    &__copy {
+        color: $footer-default;
+    }
+
+}
+
+.menu {
+    &__item--footer {
+        margin: 0;
+        padding: 0 15px;
+        line-height: 1;
+    }
+
+    &__item--footer:not(:last-child) {
+        margin: 0;
+        border-right: 1px solid #436372;
     }
 }
 
