--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset';
+@import 'libs';
 @import 'global';
 
 .header__inner {
@@ -258,6 +259,135 @@
         margin: 0;
         border-right: 1px solid #436372;
     }
+}
+
+.slider-top {
+    
+    &__large-container {
+        background-color: #fcd7b6;
+        // background-image: linear-gradient(90deg, rgba(255,255,255,0.020045518207282953) 0%, rgba(255,255,255,1) 100%);
+        // background-repeat: no-repeat;
+    }
+
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        min-height: 820px;
+        height: 100%;
+        position: relative;
+
+        & .slick-dots {
+            position: absolute;
+            bottom: 45px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            justify-content: center;
+            li {
+
+                button {
+                    width: 30px;
+                    height: 30px;
+                    @extend %rubik-500;
+                    font-size: 10px;
+                    line-height: 1;
+                    color: #243f4d;
+                    border: none;
+                    border-radius: 50%;
+                    background-color: rgba(255, 255, 255, 0.3);
+                    cursor: pointer;
+                }
+            }   
+            
+            li:not(:last-child) {
+                margin-right: 12px;
+            }
+            
+            .slick-active {
+                
+                button {
+                    background-color: #ffffff;
+                }
+            }
+        }
+    }
+    
+    &__inner {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-top: 220px;
+    }
+
+    &__content {
+        padding-left: 2px;
+        max-width: 470px;
+    }
+
+    &__title {
+        @extend %rubik-500;
+        font-size: 70px;
+        line-height: 1;
+        color: #243f4d;
+        margin-bottom: 40px;
+    }
+
+    &__text {
+        max-width: 370px;
+        font-size: 18px;
+        line-height: 1.6;
+        color: #436372;
+        margin-bottom: 45px;
+    }
+
+    &__link {
+        display: block;
+        width: 200px;
+        padding: 23px 10px 23px 26px;
+        @extend %rubik-500;
+        font-size: 15px;
+        line-height: 1;
+        color: #ffffff;
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            right: 17px;
+            transform: translateY(-50%);
+            width: 22px;
+            height: 9px;
+            background-image: url('../images/icons/button-arrow.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+    }
+
+    &__img {
+        max-width: 670px;
+        height: 400px;
+        position: relative;
+        &::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            right: -118px;
+            z-index: -1;
+            transform: translateY(-50%);
+            width: 630px;
+            height: 630px;
+            border-radius: 50%;
+            background-image: linear-gradient(90deg, rgba(255,255,255,0.020045518207282953) 0%, rgba(255,255,255,1) 100%);
+        }  
+    }
+
+    &__image {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
 }
 
 
