--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,36 +1,10 @@
+// font-family: 'DMSans', sans-serif;
+// font-family: 'Poppins', sans-serif;
+// font-family: 'Rubik', sans-serif;
+
 $black: #191919;
 $header-accent: #fcd7b6;
 $accent: #a3bbc8;
 $footer-default: #7b7b7b;
 $footer-title: #1f2044;
-$bg: #ffffff;
-
-%rubik-400 {
-    font-family: 'Rubik-Regular', sans-serif;
-    font-weight: 400;
-}
-
-%rubik-500 {
-    font-family: 'Rubik-Medium', sans-serif;
-    font-weight: 500;
-}
-
-%poppins-700 {
-    font-family: 'Poppins-Bold', sans-serif;
-    font-weight: 700;
-}
-
-%dmsans-400 {
-    font-family: 'DMSans-Regular', sans-serif;
-    font-weight: 400;
-}
-
-%dmsans-500 {
-    font-family: 'DMSans-Regular', sans-serif;
-    font-weight: 500;
-}
-
-%dmsans-700 {
-    font-family: 'DMSans-Regular', sans-serif;
-    font-weight: 700;
-}
+$bg: #fff;
