--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,13 +1,13 @@
-@import 'vars';
-@import 'fonts';
-@import 'reset';
-@import 'libs';
-@import 'global';
+@import "vars";
+@import "fonts";
+@import "reset";
+@import "libs";
+@import "global";
 
 .header__inner {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     padding: 50px 0;
 }
 
@@ -23,7 +23,7 @@
 
     &__link {
         padding: 0 1px;
-        @extend %rubik-500;
+        font-weight: 500;
         font-size: 15px;
         line-height: 1;
         color: #436372;
@@ -32,6 +32,17 @@
             color: $black;
         }
     }
+
+    &__item--footer {
+        margin: 0;
+        padding: 0 15px;
+        line-height: 1;
+    }
+
+    &__item--footer:not(:last-child) {
+        margin: 0;
+        border-right: 1px solid #436372;
+    }
 }
 
 .user-icons {
@@ -39,34 +50,34 @@
 
     &__item {
         position: relative;
+        margin-right: 20px;
         width: 50px;
         height: 50px;
-        margin-right: 20px;
+        outline: transparent;
         border: none;
         border-radius: 50%;
         background-color: $accent;
         cursor: pointer;
-        outline: transparent;
 
         &::before {
-            content: '';
+            content: "";
             position: absolute;
+            left: 0;
+            right: 0;
             top: 0;
             bottom: 0;
-            right: 0;
-            left: 0;
-            background-image: url('../images/icons/search.svg');
+            background-image: url("../images/icons/search.svg");
             background-position: center;
             background-repeat: no-repeat;
             transition: transform 0.3s;
         }
 
-        &:hover .user-icons__num {
-            transform: scale(1.2);
-        }
-
         &:focus {
             border: 2px solid $accent;
+        }
+
+        &:hover .user-icons__num {
+            transform: scale(1.2);
         }
 
         &:hover::before {
@@ -81,63 +92,63 @@
             background-color: #edf1f4;
 
             &::before {
-                background-image: url('../images/icons/search.svg');
+                background-image: url("../images/icons/search.svg");
             }
-
         }
 
         &--like {
-            width: 90px;
             margin-right: 0;
+            width: 90px;
             border-radius: 22px 0 0 22px;
             background-color: $header-accent;
 
             &::before {
-                background-image: url('../images/icons/like.svg');
+                background-image: url("../images/icons/like.svg");
                 background-position-x: 60%;
             }
         }
 
         &--basket {
             width: 90px;
-            background-color: $header-accent;
             border-radius: 0 22px 22px 0;
+            background-color: $header-accent;
 
             &::before {
-                background-image: url('../images/icons/basket.svg');
+                background-image: url("../images/icons/basket.svg");
                 background-position-x: 40%;
             }
 
             &::after {
-                content: '';
+                content: "";
                 position: absolute;
-                top: 50%;
                 left: 0;
+                top: 50%;
                 width: 1px;
                 height: 32px;
-                background-color: #ffffff;
+                background-color: #fff;
                 transform: translateY(-50%);
             }
         }
 
         &--menu::before {
-            background-image: url('../images/icons/menu.svg');
+            background-image: url("../images/icons/menu.svg");
         }
     }
 
     &__num {
         position: absolute;
-        top: 8px;
         right: 20px;
+        top: 8px;
         width: 16px;
         height: 16px;
         border-radius: 50%;
-        text-align: center;
-        line-height: 18px;
-        @extend %dmsans-400;
+        font-family: "DMSans", sans-serif;
+        font-weight: 400;
         font-size: 10px;
+        line-height: 18px;
+        text-align: center;
         color: #243f4d;
-        background-color: #ffffff;
+        background-color: #fff;
         transition: transform 0.3s;
     }
 
@@ -145,7 +156,6 @@
         right: 34px;
     }
 }
-
 
 .footer {
     &__top {
@@ -167,8 +177,8 @@
     &__contact {
         display: block;
         margin-bottom: 10px;
-        font-size: 14px;
         font-style: normal;
+        font-size: 14px;
         line-height: 1.7;
         color: $footer-default;
     }
@@ -179,7 +189,8 @@
 
     &__title {
         margin-bottom: 30px;
-        @extend %dmsans-700;
+        font-family: "DMSans", sans-serif;
+        font-weight: 700;
         font-size: 16px;
         line-height: 1.3;
         text-transform: uppercase;
@@ -201,13 +212,13 @@
     }
 
     &__newsletter {
-        width: 285px;
         padding: 0 5px;
+        width: 285px;
     }
 
     &__text {
-        width: 240px;
         margin-bottom: 30px;
+        width: 240px;
         font-size: 14px;
         line-height: 1.7;
         color: $footer-default;
@@ -219,18 +230,20 @@
 
     &__input {
         padding: 15px 5px 15px 16px;
-        background-color: #fef7f0;
         border: 1px solid transparent;
-        @extend %dmsans-400;
+        font-family: "DMSans", sans-serif;
+        font-weight: 400;
         font-size: 12px;
         line-height: 1;
         color: #234969;
+        background-color: #fef7f0;
     }
 
     &__btn {
         margin-left: -5px;
         padding: 9px 17px;
-        @extend %dmsans-400;
+        font-family: "DMSans", sans-serif;
+        font-weight: 400;
         font-size: 14px;
         line-height: 1.5;
     }
@@ -241,82 +254,61 @@
         padding: 37px 0;
     }
 
-
     &__copy {
         color: $footer-default;
-    }
-
-}
-
-.menu {
-    &__item--footer {
-        margin: 0;
-        padding: 0 15px;
-        line-height: 1;
-    }
-
-    &__item--footer:not(:last-child) {
-        margin: 0;
-        border-right: 1px solid #436372;
     }
 }
 
 .slider-top {
-    
-    &__large-container {
-        background-color: #fcd7b6;
-        // background-image: linear-gradient(90deg, rgba(255,255,255,0.020045518207282953) 0%, rgba(255,255,255,1) 100%);
-        // background-repeat: no-repeat;
-    }
-
     &__wrapper {
+        position: relative;
         display: flex;
         flex-direction: column;
-        min-height: 820px;
-        height: 100%;
-        position: relative;
 
-        & .slick-dots {
+        .slick-dots {
             position: absolute;
-            bottom: 45px;
             left: 50%;
-            transform: translateX(-50%);
+            bottom: 45px;
             display: flex;
             justify-content: center;
-            li {
+            transform: translateX(-50%);
 
+            li {
                 button {
                     width: 30px;
                     height: 30px;
-                    @extend %rubik-500;
+                    border: none;
+                    border-radius: 50%;
+                    font-weight: 500;
                     font-size: 10px;
                     line-height: 1;
                     color: #243f4d;
-                    border: none;
-                    border-radius: 50%;
                     background-color: rgba(255, 255, 255, 0.3);
                     cursor: pointer;
                 }
-            }   
-            
+            }
+
             li:not(:last-child) {
                 margin-right: 12px;
             }
-            
+
             .slick-active {
-                
                 button {
-                    background-color: #ffffff;
+                    background-color: #fff;
                 }
             }
         }
     }
-    
+
     &__inner {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding-top: 220px;
+        padding: 220px 0 280px;
+    }
+
+    &__item {
+        background-color: #fcd7b6;
     }
 
     &__content {
@@ -325,71 +317,70 @@
     }
 
     &__title {
-        @extend %rubik-500;
+        margin-bottom: 40px;
+        font-weight: 500;
         font-size: 70px;
         line-height: 1;
         color: #243f4d;
-        margin-bottom: 40px;
     }
 
     &__text {
+        margin-bottom: 45px;
         max-width: 370px;
         font-size: 18px;
         line-height: 1.6;
         color: #436372;
-        margin-bottom: 45px;
     }
 
     &__link {
+        position: relative;
         display: block;
-        width: 200px;
         padding: 23px 10px 23px 26px;
-        @extend %rubik-500;
+        width: 200px;
+        font-weight: 500;
         font-size: 15px;
         line-height: 1;
-        color: #ffffff;
-        position: relative;
+        color: #fff;
 
         &::after {
-            content: '';
+            content: "";
             position: absolute;
-            top: 50%;
             right: 17px;
-            transform: translateY(-50%);
+            top: 50%;
             width: 22px;
             height: 9px;
-            background-image: url('../images/icons/button-arrow.svg');
-            background-repeat: no-repeat;
+            background-image: url("../images/icons/button-arrow.svg");
             background-position: center;
+            background-repeat: no-repeat;
+            transform: translateY(-50%);
         }
     }
 
     &__img {
-        max-width: 670px;
-        height: 400px;
         position: relative;
+        max-width: 670px;
+
         &::after {
-            content: '';
+            content: "";
             position: absolute;
-            top: 50%;
             right: -118px;
-            z-index: -1;
-            transform: translateY(-50%);
+            top: 50%;
+            z-index: 0;
             width: 630px;
             height: 630px;
             border-radius: 50%;
-            background-image: linear-gradient(90deg, rgba(255,255,255,0.020045518207282953) 0%, rgba(255,255,255,1) 100%);
-        }  
+            background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.02005) 0%, rgba(255, 255, 255, 1) 100%);
+            transform: translateY(-50%);
+        }
     }
 
     &__image {
+        position: relative;
+        z-index: 1;
         width: 100%;
         height: 100%;
         object-fit: contain;
     }
-
 }
 
-
-
-@import 'media';
+@import "media";
