added product-promo and design section

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -4,6 +4,7 @@
 
 $black: #191919;
 $header-accent: #fcd7b6;
+$pink: #feefe2;
 $accent: #a3bbc8;
 $footer-default: #7b7b7b;
 $footer-title: #1f2044;
