added right css structure

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,10 +2,22 @@
 // font-family: 'Poppins', sans-serif;
 // font-family: 'Rubik', sans-serif;
 
-$black: #191919;
-$header-accent: #fcd7b6;
-$pink: #feefe2;
-$accent: #a3bbc8;
-$footer-default: #7b7b7b;
-$footer-title: #1f2044;
+// blue
+$blue20: #a3bbc8;
+$blue70: #436372;
+$blue80: #243f4d;
+
+// rose
+$pink20: #feefe2;
+$pink50: #fcd7b6;
+
+// grey
+$gray50: #8b8b8b;
+$gray60: #7b7b7b;
+
+// black
+$black30: #262626;
+$black90: #191919;
+
+// other
 $bg: #fff;
