--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,59 +1,61 @@
+/* stylelint-disable */
 @font-face {
+    font-family: "Rubik";
+    font-weight: 400;
+    font-style: normal;
     src:
         url("../fonts/Rubik-Regular.woff2") format("woff2"),
         url("../fonts/Rubik-Regular.woff") format("woff");
-    font-family: "Rubik";
-    font-weight: 400;
-    font-style: normal;
     font-display: swap;
 }
 
 @font-face {
+    font-family: "Rubik";
+    font-weight: 500;
+    font-style: normal;
     src:
         url("../fonts/Rubik-Medium.woff2") format("woff2"),
         url("../fonts/Rubik-Medium.woff") format("woff");
-    font-family: "Rubik";
-    font-weight: 500;
-    font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    src:
-        url("../fonts/Poppins-Bold.woff2") format("woff2"),
-        url("../fonts/Poppins-Bold.woff") format("woff");
     font-family: "Poppins";
     font-weight: 700;
     font-style: normal;
+    src:
+        url("../fonts/Poppins-Bold.woff2") format("woff2"),
+        url("../fonts/Poppins-Bold.woff") format("woff");
     font-display: swap;
 }
 
 @font-face {
-    src:
-        url("../fonts/DMSans-Regular.woff2") format("woff2"),
-        url("../fonts/DMSans-Regular.woff") format("woff");
     font-family: "DMSans";
     font-weight: 400;
     font-style: normal;
+    src:
+        url("../fonts/DMSans-Regular.woff2") format("woff2"),
+        url("../fonts/DMSans-Regular.woff") format("woff");
     font-display: swap;
 }
 
 @font-face {
-    src:
-        url("../fonts/DMSans-Medium.woff2") format("woff2"),
-        url("../fonts/DMSans-Medium.woff") format("woff");
     font-family: "DMSans";
     font-weight: 500;
     font-style: normal;
+    src:
+        url("../fonts/DMSans-Medium.woff2") format("woff2"),
+        url("../fonts/DMSans-Medium.woff") format("woff");
     font-display: swap;
 }
 
 @font-face {
-    src:
-        url("../fonts/DMSans-Bold.woff2") format("woff2"),
-        url("../fonts/DMSans-Bold.woff") format("woff");
     font-family: "DMSans";
     font-weight: 700;
     font-style: normal;
+    src:
+        url("../fonts/DMSans-Bold.woff2") format("woff2"),
+        url("../fonts/DMSans-Bold.woff") format("woff");
     font-display: swap;
 }
+/* stylelint-enable */
