--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,718 +1,31 @@
-@import "vars";
 @import "fonts";
+@import "vars";
 @import "reset";
 @import "libs";
+@import "mixins";
 @import "global";
 
-.header {
-    &__inner {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 50px 0;
-    }
+/* stylelint-disable */
 
-    &__logo {
-        margin-right: 170px;
-    }
-}
+// index
 
-.menu {
-    &__list {
-        display: flex;
-        justify-content: center;
-    }
+@import "index/slider-top";
+@import "index/advantages";
+@import "index/products";
+@import "index/design";
 
-    &__item:not(:last-child) {
-        margin-right: 35px;
-    }
 
-    &__link {
-        padding: 0 1px;
-        font-weight: 500;
-        font-size: 15px;
-        line-height: 1;
-        color: #436372;
+// components
 
-        &--active {
-            color: $black;
-        }
-    }
+@import "components/mix-filter";
+@import "components/buttons";
+@import "components/subscribtion-form";
+@import "components/product-card";
+@import "components/circle-btn";
+@import "components/header";
+@import "components/footer";
 
-    &__item--footer {
-        margin: 0;
-        padding: 0 15px;
-        line-height: 1;
-    }
 
-    &__item--footer:not(:last-child) {
-        margin: 0;
-        border-right: 1px solid #436372;
-    }
-}
-
-.user-icons {
-    display: flex;
-
-    &__item:last-child {
-        margin-right: 0;
-    }
-
-    &__item {
-        position: relative;
-        margin-right: 20px;
-        width: 50px;
-        height: 50px;
-        outline: transparent;
-        border: none;
-        border-radius: 50%;
-        background-color: $accent;
-        cursor: pointer;
-
-        &::before {
-            content: "";
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
-            background-image: url("../images/icons/search.svg");
-            background-position: center;
-            background-repeat: no-repeat;
-            transition: transform 0.3s;
-        }
-
-        &:focus {
-            border: 2px solid $accent;
-        }
-
-        &:hover .user-icons__num {
-            transform: scale(1.2);
-        }
-
-        &:hover::before {
-            transform: scale(1.2);
-        }
-
-        &:active::before {
-            transform: rotateX(180deg);
-        }
-
-        &--search {
-            background-color: #edf1f4;
-
-            &::before {
-                background-image: url("../images/icons/search.svg");
-            }
-        }
-
-        &--like {
-            margin-right: 0;
-            width: 90px;
-            border-radius: 22px 0 0 22px;
-            background-color: $header-accent;
-
-            &::before {
-                background-image: url("../images/icons/like.svg");
-                background-position-x: 60%;
-            }
-        }
-
-        &--basket {
-            width: 90px;
-            border-radius: 0 22px 22px 0;
-            background-color: $header-accent;
-
-            &::before {
-                background-image: url("../images/icons/basket.svg");
-                background-position-x: 40%;
-            }
-
-            &::after {
-                content: "";
-                position: absolute;
-                left: 0;
-                top: 50%;
-                width: 1px;
-                height: 32px;
-                background-color: #fff;
-                transform: translateY(-50%);
-            }
-        }
-
-        &--menu::before {
-            background-image: url("../images/icons/menu.svg");
-        }
-    }
-
-    &__num {
-        position: absolute;
-        right: 20px;
-        top: 8px;
-        width: 16px;
-        height: 16px;
-        border-radius: 50%;
-        font-family: "DMSans", sans-serif;
-        font-weight: 400;
-        font-size: 10px;
-        line-height: 18px;
-        text-align: center;
-        color: #243f4d;
-        background-color: #fff;
-        transition: transform 0.3s;
-    }
-
-    &__num--basket {
-        right: 34px;
-    }
-}
-
-.footer {
-    &__top {
-        display: flex;
-        justify-content: space-between;
-        padding: 80px 0 73px;
-        border-bottom: 1px solid #dae4e9;
-    }
-
-    &__address {
-        width: 215px;
-    }
-
-    &__logo {
-        display: block;
-        margin-bottom: 28px;
-    }
-
-    &__contact {
-        display: block;
-        margin-bottom: 10px;
-        font-style: normal;
-        font-size: 14px;
-        line-height: 1.7;
-        color: $footer-default;
-    }
-
-    &__caps {
-        text-transform: uppercase;
-    }
-
-    &__title {
-        margin-bottom: 30px;
-        font-family: "DMSans", sans-serif;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.3;
-        text-transform: uppercase;
-        color: $footer-title;
-    }
-
-    &__list {
-        padding: 0 5px;
-        width: 145px;
-    }
-
-    &__item {
-        line-height: 1.4;
-        color: $footer-default;
-    }
-
-    &__item:not(:last-child) {
-        margin-bottom: 12px;
-    }
-
-    &__newsletter {
-        padding: 0 5px;
-        width: 285px;
-    }
-
-    &__text {
-        margin-bottom: 30px;
-        width: 240px;
-        font-size: 14px;
-        line-height: 1.7;
-        color: $footer-default;
-    }
-
-    &__form {
-        display: flex;
-    }
-
-    &__input {
-        padding: 15px 5px 15px 16px;
-        border: 1px solid transparent;
-        font-family: "DMSans", sans-serif;
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 1;
-        color: #234969;
-        background-color: #fef7f0;
-    }
-
-    &__btn {
-        margin-left: -5px;
-        padding: 9px 17px;
-        font-family: "DMSans", sans-serif;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.5;
-    }
-
-    &__bottom {
-        display: flex;
-        justify-content: space-between;
-        padding: 37px 0;
-    }
-
-    &__copy {
-        color: $footer-default;
-    }
-}
-
-.slider-top {
-    &__wrapper {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-
-        .slick-dots {
-            position: absolute;
-            left: 50%;
-            bottom: 45px;
-            display: flex;
-            justify-content: center;
-            transform: translateX(-50%);
-
-            li {
-                button {
-                    width: 30px;
-                    height: 30px;
-                    border: none;
-                    border-radius: 50%;
-                    font-weight: 500;
-                    font-size: 10px;
-                    line-height: 1;
-                    color: #243f4d;
-                    background-color: rgba(255, 255, 255, 0.3);
-                    cursor: pointer;
-                }
-            }
-
-            li:not(:last-child) {
-                margin-right: 12px;
-            }
-
-            .slick-active {
-                button {
-                    background-color: #fff;
-                }
-            }
-        }
-    }
-
-    &__inner {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 220px 0 280px;
-    }
-
-    &__item {
-        background-color: #fcd7b6;
-    }
-
-    &__content {
-        padding-left: 2px;
-        max-width: 470px;
-    }
-
-    &__title {
-        margin-bottom: 22px;
-        font-weight: 500;
-        font-size: 70px;
-        line-height: 1;
-        text-transform: uppercase;
-        color: #243f4d;
-    }
-
-    &__text {
-        margin-bottom: 45px;
-        max-width: 370px;
-        font-size: 18px;
-        line-height: 1.6;
-        color: #436372;
-    }
-
-    &__link {
-        position: relative;
-        display: block;
-        padding: 23px 10px 23px 26px;
-        width: 200px;
-        font-weight: 500;
-        font-size: 15px;
-        line-height: 1;
-        color: #fff;
-
-        &::after {
-            content: "";
-            position: absolute;
-            right: 17px;
-            top: 50%;
-            width: 22px;
-            height: 9px;
-            background-image: url("../images/icons/button-arrow.svg");
-            background-position: center;
-            background-repeat: no-repeat;
-            transform: translateY(-50%);
-        }
-    }
-
-    &__img {
-        position: relative;
-        max-width: 670px;
-
-        &::after {
-            content: "";
-            position: absolute;
-            right: -118px;
-            top: 50%;
-            z-index: 0;
-            width: 630px;
-            height: 630px;
-            border-radius: 50%;
-            background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.02005) 0%, rgba(255, 255, 255, 1) 100%);
-            transform: translateY(-50%);
-        }
-    }
-
-    &__image {
-        position: relative;
-        z-index: 1;
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-}
-
-.advantages {
-    display: flex;
-
-    &__item {
-        display: flex;
-        justify-content: center;
-        padding: 28px 20px 45px 84px;
-        width: 100%;
-        max-width: 600px;
-        background-color: #fef7f0;
-    }
-
-    &__item:not(:last-child) {
-        border-right: 1px solid rgba(36, 63, 77, 0.1);
-    }
-
-    &__content {
-        position: relative;
-        width: 100%;
-        max-width: 220px;
-        font-family: "DMSans", sans-serif;
-
-        &::before {
-            content: "";
-            position: absolute;
-            left: -30%;
-            top: 9px;
-            width: 56px;
-            height: 50px;
-            background-position: center top;
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-
-        &--support::before {
-            width: 50px;
-            background-image: url("../images/icons/support.svg");
-        }
-
-        &--delivery::before {
-            background-image: url("../images/icons/delivery.svg");
-        }
-
-        &--paymant::before {
-            background-image: url("../images/icons/paymant.svg");
-        }
-    }
-
-    &__title {
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 2.2;
-        color: #414141;
-    }
-
-    p {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.8;
-        color: #585858;
-    }
-}
-
-.products {
-    padding: 70px 0 0;
-
-    &__container {
-        max-width: 1230px;
-    }
-
-    &__title {
-        margin-bottom: 20px;
-    }
-
-    &__list {
-        margin-bottom: 80px;
-    }
-
-    &__content {
-        display: flex;
-        flex-wrap: wrap;
-        margin-bottom: 186px;
-    }
-
-    &__item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-end;
-        margin: 0 15px 40px;
-        padding: 30px 15px 40px;
-        width: 270px;
-        height: 385px;
-        box-shadow: 0 6px 47px 3px rgba(37, 37, 37, 0.05);
-    }
-
-    &__image {
-        position: relative;
-        width: 250px;
-        overflow: hidden;
-        transition: background-color 0.5s;
-
-        &::before {
-            content: "";
-            position: absolute;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            width: 100%;
-            height: 30%;
-            background-color: rgba(65, 65, 65, 0);
-            transition: background-color 0.5s;
-        }
-
-        &:hover::before {
-            background-color: rgba(65, 65, 65, 0.3);
-        }
-
-        &:hover .products__icons {
-            transform: translate(-50%, 0);
-        }
-    }
-
-    &__img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-
-    &__icons {
-        position: absolute;
-        left: 50%;
-        bottom: 40px;
-        display: flex;
-        justify-content: center;
-        transform: translate(-50%, 300%);
-        transition: transform 0.5s;
-    }
-
-    &__icon {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-right: 15px;
-        width: 45px;
-        height: 45px;
-        border-radius: 50%;
-        background-color: $bg;
-        transition: fill 0.3s, background-color 0.3s;
-
-        &:hover {
-            background-color: #a3bbc8;
-        }
-
-        &:hover path {
-            fill: #f9fafb;
-        }
-    }
-
-    &__text {
-        margin-top: 40px;
-    }
-
-    &__subtitle {
-        font-family: "DMSans", sans-serif;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 2.2;
-        color: #243f4d;
-    }
-
-    &__cost {
-        display: block;
-        text-align: center;
-    }
-}
-
-.mix-filter {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    &__item:not(:last-child) {
-        margin-right: 20px;
-    }
-
-    &__link {
-        border: none;
-        font-family: "DMSans", sans-serif;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.1;
-        color: #8b8b8b;
-        background-color: transparent;
-        cursor: pointer;
-
-        &--active {
-            color: $black;
-        }
-    }
-}
-
-.products-promo {
-    &__inner {
-        display: grid;
-        grid-column-gap: 30px;
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    &__card {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding-right: 150px;
-        width: 100%;
-        min-height: 390px;
-        max-width: 870px;
-        background-color: $pink;
-    }
-
-    &__image {
-        flex-basis: 355px;
-        margin-top: -180px;
-        margin-right: 15px;
-    }
-
-    &__img {
-        margin-left: auto;
-    }
-
-    &__content {
-        color: #243f4d;
-    }
-
-    &__title {
-        margin-bottom: 33px;
-        width: 270px;
-        font-family: "DMSans", sans-serif;
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.2;
-    }
-
-    &__text {
-        margin-bottom: 40px;
-        max-width: 330px;
-    }
-
-    &__link {
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 23px 20px;
-        width: 180px;
-        border: 1px solid #b3b7b5;
-        border-radius: 5px;
-        font-weight: 500;
-        font-size: 15px;
-        color: #436372;
-        background-color: transparent;
-
-        &:active {
-            color: $bg;
-
-            path {
-                fill: $bg;
-            }
-        }
-    }
-}
-
-.design {
-    padding: 105px 120px;
-
-    &__title {
-        margin-bottom: 35px;
-    }
-
-    &__list {
-        margin-bottom: 80px;
-    }
-}
-
-.design-cards {
-    display: grid;
-    grid-gap: 35px 30px;
-    grid-template-columns: repeat(3, 1fr);
-
-    &__item {
-        height: 246px;
-        max-width: 370px;
-        background-repeat: no-repeat;
-    }
-
-    &__link {
-        display: block;
-        padding: 40px 0 0 35px;
-        width: 100%;
-        height: 100%;
-        font-family: "DMSans", sans-serif;
-        font-weight: 700;
-        transition: background-color 0.5s;
-
-        &:hover {
-            background-color: rgba(139, 139, 139, 0.3);
-        }
-    }
-
-    &__title {
-        width: 175px;
-        font-size: 20px;
-        line-height: 1;
-        color: $black;
-    }
-
-    &__type {
-        color: #a3bbc8;
-    }
-}
+/* stylelint-enable */
 
 @import "media";
