added article section

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -21,3 +21,11 @@ $black90: #191919;
 
 // other
 $bg: #fff;
+
+@function max($numbers...) {
+    @return m#{a}x(#{$numbers});
+}
+
+@function min($numbers...) {
+    @return m#{i}n(#{$numbers});
+}
