--- a/app/scss/components/_product-card.scss
+++ b/app/scss/components/_product-card.scss
@@ -6,6 +6,7 @@
     padding: 30px 15px 40px;
     width: 270px;
     height: 385px;
+    border: 3px solid transparent;
     box-shadow: 0 6px 47px 3px rgba(37, 37, 37, 0.05);
 
     &__image {
