--- a/app/scss/components/_articles.scss
+++ b/app/scss/components/_articles.scss
@@ -1,10 +1,10 @@
 .articles {
-    padding: 120px 0 100px;
+    padding: 120px 0 0;
     background-image:
         linear-gradient(
             180deg,
             rgba(255, 255, 255, 0.02) 0%,
-            rgba(255, 255, 255, 1) 50%,
+            rgba(255, 255, 255, 1) 70.5%,
             rgba(254, 247, 240, 1) 50%,
             rgba(254, 247, 240, 1) 100%
         );
@@ -35,7 +35,7 @@
     &__inner {
         display: flex;
         flex-wrap: wrap;
-        margin: 0 -15px 77px;
+        margin: 0 -15px;
     }
 
     &__item {
