--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -1,8 +1,10 @@
 .footer {
+    padding-top: 90px;
+
     &__top {
         display: flex;
         justify-content: space-between;
-        padding: 110px 0 75px;
+        padding: 30px 0;
         border-bottom: 1px solid #dae4e9;
     }
 
@@ -44,7 +46,7 @@
     }
 
     &__list {
-        padding: 0 5px;
+        padding-right: 5px;
         width: 150px;
     }
 
@@ -54,7 +56,7 @@
     }
 
     &__item:not(:last-child) {
-        margin-bottom: 12px;
+        margin-bottom: 10px;
     }
 
     &__text {
@@ -69,7 +71,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 37px 0;
+        padding: 18px 0;
     }
 
     &__copy {
