--- a/app/scss/components/_partners.scss
+++ b/app/scss/components/_partners.scss
@@ -1,5 +1,12 @@
 .partners {
-    display: flex;
+    // position: relative;
+    // top: -190px;
+    padding: 90px;
+    background-color: #fef7f0;
+
+    &__inner {
+        display: flex;
+    }
 
     &__link {
         display: flex;
