--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -4,13 +4,13 @@ body {
 }
 
 body {
-    padding: 0 70px;
-    @extend %rubik-400;
+    display: flex;
+    flex-direction: column;
+    font-family: "Rubik", sans-serif;
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.9;
     background-color: $bg;
-    display: flex;
-    flex-direction: column;
 }
 
 .main {
@@ -18,73 +18,22 @@ body {
 }
 
 .container {
+    margin: 0 auto;
+    padding: 0 15px;
     max-width: 1200px;
-    padding: 0 15px;
-    margin: 0 auto;
-}
 
-.large-container {
-    max-width: 1800px;
-    padding: 0 15px;
-    margin: 0 auto;
+    &--lg {
+        max-width: 1800px;
+    }
 }
 
 .sr-only {
     position: absolute;
+    margin: -1px;
     width: 1px;
     height: 1px;
-    margin: -1px;
-    border: 0;
-    white-space: nowrap;
     clip-path: inset(0 0 0 0);
     overflow: hidden;
-}
-
-.link {
-    outline: none;
-    transition: padding 0.3s;
-    &:focus {
-        border-bottom: 2px solid $accent;
-    }
-
-    &:hover {
-        opacity: 0.7;
-    }
-
-    &:active {
-        padding: 5px;
-    }
-}
-
-.button {
-    outline: none;
-    border: 2px solid transparent;
-    background-color: #a3bbc8;
-    color: $bg;
-    box-shadow: 0 0 transparent;
-    transition: border-color 0.3s, box-shadow 0.5s, background-color 0.3s;
-
-    &:focus {
-        border: 2px solid #436372;
-    }
-
-    &:hover {
-        box-shadow: 3px 3px 10px #a3bbc8;
-    }
-
-    &:active {
-        background-color: #436070;
-    }
-}
-
-.input {
-    outline: none;
-    transition: border-color 0.3s, opacity 0.3s;
-    &:focus {
-        border: 1px solid #436372;
-    }
-
-    &:hover::placeholder {
-        opacity: 0.7;
-    }
+    border: 0;
+    white-space: nowrap;
 }
