--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,395 +1,35 @@
-@import 'vars';
-@import 'fonts';
-@import 'reset';
-@import 'libs';
-@import 'global';
+@import "fonts";
+@import "vars";
+@import "reset";
+@import "libs";
+@import "mixins";
+@import "global";
 
-.header__inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 50px 0;
-}
+/* stylelint-disable */
 
-.menu {
-    &__list {
-        display: flex;
-        justify-content: center;
-    }
+// index
 
-    &__item:not(:last-child) {
-        margin-right: 35px;
-    }
-
-    &__link {
-        padding: 0 1px;
-        @extend %rubik-500;
-        font-size: 15px;
-        line-height: 1;
-        color: #436372;
-
-        &--active {
-            color: $black;
-        }
-    }
-}
-
-.user-icons {
-    display: flex;
-
-    &__item {
-        position: relative;
-        width: 50px;
-        height: 50px;
-        margin-right: 20px;
-        border: none;
-        border-radius: 50%;
-        background-color: $accent;
-        cursor: pointer;
-        outline: transparent;
-
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            left: 0;
-            background-image: url('../images/icons/search.svg');
-            background-position: center;
-            background-repeat: no-repeat;
-            transition: transform 0.3s;
-        }
-
-        &:hover .user-icons__num {
-            transform: scale(1.2);
-        }
-
-        &:focus {
-            border: 2px solid $accent;
-        }
-
-        &:hover::before {
-            transform: scale(1.2);
-        }
-
-        &:active::before {
-            transform: rotateX(180deg);
-        }
-
-        &--search {
-            background-color: #edf1f4;
-
-            &::before {
-                background-image: url('../images/icons/search.svg');
-            }
-
-        }
-
-        &--like {
-            width: 90px;
-            margin-right: 0;
-            border-radius: 22px 0 0 22px;
-            background-color: $header-accent;
-
-            &::before {
-                background-image: url('../images/icons/like.svg');
-                background-position-x: 60%;
-            }
-        }
-
-        &--basket {
-            width: 90px;
-            background-color: $header-accent;
-            border-radius: 0 22px 22px 0;
-
-            &::before {
-                background-image: url('../images/icons/basket.svg');
-                background-position-x: 40%;
-            }
-
-            &::after {
-                content: '';
-                position: absolute;
-                top: 50%;
-                left: 0;
-                width: 1px;
-                height: 32px;
-                background-color: #ffffff;
-                transform: translateY(-50%);
-            }
-        }
-
-        &--menu::before {
-            background-image: url('../images/icons/menu.svg');
-        }
-    }
-
-    &__num {
-        position: absolute;
-        top: 8px;
-        right: 20px;
-        width: 16px;
-        height: 16px;
-        border-radius: 50%;
-        text-align: center;
-        line-height: 18px;
-        @extend %dmsans-400;
-        font-size: 10px;
-        color: #243f4d;
-        background-color: #ffffff;
-        transition: transform 0.3s;
-    }
-
-    &__num--basket {
-        right: 34px;
-    }
-}
+@import "index/slider-top";
+@import "index/video-popup";
+@import "index/advantages";
+@import "index/products";
+@import "index/design";
 
 
-.footer {
-    &__top {
-        display: flex;
-        justify-content: space-between;
-        padding: 80px 0 73px;
-        border-bottom: 1px solid #dae4e9;
-    }
+// components
 
-    &__address {
-        width: 215px;
-    }
-
-    &__logo {
-        display: block;
-        margin-bottom: 28px;
-    }
-
-    &__contact {
-        display: block;
-        margin-bottom: 10px;
-        font-size: 14px;
-        font-style: normal;
-        line-height: 1.7;
-        color: $footer-default;
-    }
-
-    &__caps {
-        text-transform: uppercase;
-    }
-
-    &__title {
-        margin-bottom: 30px;
-        @extend %dmsans-700;
-        font-size: 16px;
-        line-height: 1.3;
-        text-transform: uppercase;
-        color: $footer-title;
-    }
-
-    &__list {
-        padding: 0 5px;
-        width: 145px;
-    }
-
-    &__item {
-        line-height: 1.4;
-        color: $footer-default;
-    }
-
-    &__item:not(:last-child) {
-        margin-bottom: 12px;
-    }
-
-    &__newsletter {
-        width: 285px;
-        padding: 0 5px;
-    }
-
-    &__text {
-        width: 240px;
-        margin-bottom: 30px;
-        font-size: 14px;
-        line-height: 1.7;
-        color: $footer-default;
-    }
-
-    &__form {
-        display: flex;
-    }
-
-    &__input {
-        padding: 15px 5px 15px 16px;
-        background-color: #fef7f0;
-        border: 1px solid transparent;
-        @extend %dmsans-400;
-        font-size: 12px;
-        line-height: 1;
-        color: #234969;
-    }
-
-    &__btn {
-        margin-left: -5px;
-        padding: 9px 17px;
-        @extend %dmsans-400;
-        font-size: 14px;
-        line-height: 1.5;
-    }
-
-    &__bottom {
-        display: flex;
-        justify-content: space-between;
-        padding: 37px 0;
-    }
+@import "components/circle-btn";
+@import "components/partners";
+@import "components/article-card";
+@import "components/articles";
+@import "components/header";
+@import "components/footer";
+@import "components/mix-filter";
+@import "components/design-card";
+@import "components/title";
+@import "components/buttons";
+@import "components/subscribtion-form";
+@import "components/product-card";
 
 
-    &__copy {
-        color: $footer-default;
-    }
-
-}
-
-.menu {
-    &__item--footer {
-        margin: 0;
-        padding: 0 15px;
-        line-height: 1;
-    }
-
-    &__item--footer:not(:last-child) {
-        margin: 0;
-        border-right: 1px solid #436372;
-    }
-}
-
-.slider-top {
-    
-    &__large-container {
-        background-color: #fcd7b6;
-        // background-image: linear-gradient(90deg, rgba(255,255,255,0.020045518207282953) 0%, rgba(255,255,255,1) 100%);
-        // background-repeat: no-repeat;
-    }
-
-    &__wrapper {
-        display: flex;
-        flex-direction: column;
-        min-height: 820px;
-        height: 100%;
-        position: relative;
-
-        & .slick-dots {
-            position: absolute;
-            bottom: 45px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            justify-content: center;
-            li {
-
-                button {
-                    width: 30px;
-                    height: 30px;
-                    @extend %rubik-500;
-                    font-size: 10px;
-                    line-height: 1;
-                    color: #243f4d;
-                    border: none;
-                    border-radius: 50%;
-                    background-color: rgba(255, 255, 255, 0.3);
-                    cursor: pointer;
-                }
-            }   
-            
-            li:not(:last-child) {
-                margin-right: 12px;
-            }
-            
-            .slick-active {
-                
-                button {
-                    background-color: #ffffff;
-                }
-            }
-        }
-    }
-    
-    &__inner {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding-top: 220px;
-    }
-
-    &__content {
-        padding-left: 2px;
-        max-width: 470px;
-    }
-
-    &__title {
-        @extend %rubik-500;
-        font-size: 70px;
-        line-height: 1;
-        color: #243f4d;
-        margin-bottom: 40px;
-    }
-
-    &__text {
-        max-width: 370px;
-        font-size: 18px;
-        line-height: 1.6;
-        color: #436372;
-        margin-bottom: 45px;
-    }
-
-    &__link {
-        display: block;
-        width: 200px;
-        padding: 23px 10px 23px 26px;
-        @extend %rubik-500;
-        font-size: 15px;
-        line-height: 1;
-        color: #ffffff;
-        position: relative;
-
-        &::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            right: 17px;
-            transform: translateY(-50%);
-            width: 22px;
-            height: 9px;
-            background-image: url('../images/icons/button-arrow.svg');
-            background-repeat: no-repeat;
-            background-position: center;
-        }
-    }
-
-    &__img {
-        max-width: 670px;
-        height: 400px;
-        position: relative;
-        &::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            right: -118px;
-            z-index: -1;
-            transform: translateY(-50%);
-            width: 630px;
-            height: 630px;
-            border-radius: 50%;
-            background-image: linear-gradient(90deg, rgba(255,255,255,0.020045518207282953) 0%, rgba(255,255,255,1) 100%);
-        }  
-    }
-
-    &__image {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-
-}
-
-
-
-@import 'media';
+/* stylelint-enable */
