--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -3,14 +3,32 @@
 
     &__top {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         padding: 30px 0;
         border-bottom: 1px solid #dae4e9;
+
+        @include r($sm) {
+            justify-content: flex-start;
+        }
     }
 
     &__columns {
         flex-basis: 300px;
         padding: 0 5px;
+
+        @include r($lg) {
+            flex-basis: auto;
+            margin-bottom: 30px;
+        }
+
+        @include r($sm) {
+            flex-basis: 170px;
+
+            &:first-child {
+                flex-basis: 100%;
+            }
+        }
     }
 
     &__logo {
@@ -36,6 +54,7 @@
     }
 
     &__title {
+        position: relative;
         margin-bottom: 20px;
         font-family: "DMSans", sans-serif;
         font-weight: 700;
@@ -43,11 +62,48 @@
         line-height: 1.3;
         text-transform: uppercase;
         color: #1f2044;
+        pointer-events: none;
+
+        @include r($xsm) {
+            pointer-events: auto;
+
+            &--slide {
+                &::after {
+                    content: ">";
+                    position: absolute;
+                    right: 50px;
+                    top: -10px;
+                    font-size: 30px;
+                    transform: rotate(90deg);
+                    transition: transform 0.3s;
+                }
+            }
+
+            &--active {
+                &::after {
+                    content: ">";
+                    position: absolute;
+                    right: 50px;
+                    top: -10px;
+                    font-size: 30px;
+                    transform: rotate(-90deg);
+                }
+            }
+        }
     }
 
     &__list {
+        display: block;
         padding-right: 5px;
         width: 150px;
+
+        @include r($lg) {
+            width: auto;
+        }
+
+        @include r($xsm) {
+            display: none;
+        }
     }
 
     &__item {
@@ -77,5 +133,10 @@
     &__copy {
         font-size: 14px;
         color: $gray60;
+
+        @include r($xsm) {
+            width: 210px;
+            font-size: 16px;
+        }
     }
 }
