made the adaptive of the home page and sticky header

--- a/app/scss/components/_articles.scss
+++ b/app/scss/components/_articles.scss
@@ -30,15 +30,28 @@
             font-size: 22px;
             transform: translateY(-50%);
         }
+
+        @include r($xl) {
+            padding-right: 10px;
+        }
     }
 
     &__inner {
         display: flex;
         flex-wrap: wrap;
         margin: 0 -15px;
+
+        @include r($xl) {
+            justify-content: center;
+        }
     }
 
     &__item {
         margin: 0 15px;
+    }
+
+    @include r($lg) {
+        padding: 50px 0 0;
+        background-image: none;
     }
 }
