--- a/app/scss/index/_slider-top.scss
+++ b/app/scss/index/_slider-top.scss
@@ -1,4 +1,6 @@
 .slider-top {
+    padding-top: 145px;
+
     &__wrapper {
         position: relative;
         display: flex;
@@ -45,6 +47,17 @@
                     background-color: $bg;
                 }
             }
+
+            // здесь написал одну по высоте индивидуально,
+            // так как по высоте отображается не корректно если брать ближайшую переменную
+
+            @include h(560px) {
+                display: none;
+            }
+
+            @include r($xsm) {
+                bottom: 30px;
+            }
         }
     }
 
@@ -53,6 +66,18 @@
         align-items: center;
         justify-content: space-between;
         min-height: 830px;
+
+        @include r($xl) {
+            min-height: calc(100vh - 145px);
+        }
+
+        @include r($md) {
+            justify-content: center;
+        }
+
+        @include h($sm) {
+            padding: 15px 0;
+        }
     }
 
     &__item {
@@ -62,6 +87,10 @@
     &__content {
         padding-left: 2px;
         max-width: 470px;
+
+        @include r($md) {
+            text-align: center;
+        }
     }
 
     &__title {
@@ -73,6 +102,14 @@
         line-height: 1;
         text-transform: uppercase;
         color: $blue80;
+
+        @include r($lg) {
+            font-size: 50px;
+        }
+
+        @include r($xsm) {
+            font-size: 40px;
+        }
     }
 
     &__text {
@@ -83,18 +120,25 @@
         font-size: 18px;
         line-height: 1.6;
         color: $blue70;
+
+        @include r($lg) {
+            font-size: 16px;
+        }
+
+        @include r($md) {
+            margin: 0 auto 45px;
+        }
+
+        @include r($xsm) {
+            margin-bottom: 30px;
+        }
     }
 
     &__link {
-        position: relative;
-        display: block;
-        padding: 23px 10px 23px 26px;
-        width: 200px;
-        font-weight: 500;
-        font-size: 15px;
-        line-height: 1;
-        color: $bg;
-        background-color: #a3bbc8;
+        @include r($md) {
+            margin: 0 auto;
+            text-align: justify;
+        }
     }
 
     &__img {
@@ -112,6 +156,15 @@
             border-radius: 50%;
             background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.02005) 0%, rgba(255, 255, 255, 1) 100%);
             transform: translateY(-50%);
+
+            @include r($lg) {
+                width: 530px;
+                height: 530px;
+            }
+        }
+
+        @include r($md) {
+            display: none;
         }
     }
 
