--- a/app/scss/index/_advantages.scss
+++ b/app/scss/index/_advantages.scss
@@ -1,6 +1,11 @@
 .advantages {
     &__list {
         display: flex;
+
+        @include r($lg) {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
     }
 
     &__item {
@@ -10,10 +15,24 @@
         width: 100%;
         max-width: 600px;
         background-color: #fef7f0;
+
+        @include r($lg) {
+            flex-basis: 50%;
+        }
+
+        @include r($md) {
+            flex-basis: auto;
+            padding: 28px 20px;
+        }
     }
 
     &__item:not(:last-child) {
         border-right: 1px solid rgba(36, 63, 77, 0.1);
+
+        @include r($md) {
+            border-right: none;
+            border-bottom: 1px solid rgba(36, 63, 77, 0.1);
+        }
     }
 
     &__content {
@@ -32,6 +51,10 @@
             background-position: center top;
             background-size: contain;
             background-repeat: no-repeat;
+
+            @include r($xsm) {
+                display: none;
+            }
         }
 
         &--support::before {
