--- a/app/scss/index/_products.scss
+++ b/app/scss/index/_products.scss
@@ -13,6 +13,14 @@
         display: flex;
         flex-wrap: wrap;
         margin: 0 -15px 135px;
+
+        @include r($xl) {
+            justify-content: center;
+        }
+
+        @include r($md) {
+            margin-bottom: 70px;
+        }
     }
 
     &__item {
@@ -25,6 +33,16 @@
         display: grid;
         grid-column-gap: 30px;
         grid-template-columns: repeat(2, 1fr);
+
+        @include r($xl) {
+            justify-items: center;
+            grid-row-gap: 100px;
+            grid-template-columns: 1fr;
+        }
+
+        @include r($md) {
+            grid-row-gap: 50px;
+        }
     }
 
     &__card {
@@ -36,12 +54,31 @@
         min-height: 390px;
         max-width: 870px;
         background-color: $pink20;
+
+        @include r($md) {
+            justify-content: center;
+            padding-right: 0;
+            text-align: center;
+        }
+
+        @include r($sm) {
+            padding: 0 5px;
+        }
+    }
+
+    &__link {
+        margin: 0 auto;
+        text-align: justify;
     }
 
     &__image {
         flex-basis: 355px;
         margin-top: -180px;
         margin-right: 15px;
+
+        @include r($md) {
+            display: none;
+        }
     }
 
     &__img {
@@ -61,6 +98,10 @@
         font-weight: 700;
         font-size: 26px;
         line-height: 1.2;
+
+        @include r($md) {
+            margin: 0 auto 33px;
+        }
     }
 
     &__text {
